# hsync

./: .gitignore  Cargo.toml  README.md
.zed/: debug.json
client/: Cargo.toml  build.rs  file_mutator.py
client/client/: file_mutator.py
client/client/src/: client.rs
client/src/: client.rs  main.rs  watch.rs
proto/: hsync.proto
server/: Cargo.toml  server.rs  test.db-journal
server/server/src/: server.rs
server/src/: main.rs  server.rs
src/: diff.rs  main.rs
