[package]
name = "hsync-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
glob = "0.3.3"
inotify = "0.11.0"
quinn = "0.11.9"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = "0.38.0"
similar = "2.7.0"
tracing = "0.1.44"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
