[package]
name = "hsync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
prost = "0.14.3"
prost-types = "0.14.3"
quinn = "0.11.9"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = "0.38.0"
rustls = "0.23.36"
tokio = { version = "1.49.0", features = ["full", "sync"] }
tracing = "0.1.44"

[build-dependencies]
prost-build = "0.14.3"
