[package]
name = "hsync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base16ct = { version = "1.0.0", features = ["alloc"] }
blake2 = "0.10.6"
clap = { version = "4.5.56", features = ["derive"] }
futures = "0.3.32"
prost = "0.14.3"
prost-types = "0.14.3"
quinn = "0.11.9"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rand = "0.10.0"
rcgen = "0.14.7"
rusqlite = { version = "0.38.0", features = ["blob"] }
rustls = "0.23.36"
similar = { version = "2.7.0", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full", "sync"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[build-dependencies]
prost-build = "0.14.3"
